# LSegui

./: .gitignore  Cargo.toml
.github/workflows/: deploy_ghpages.yml  rust.yml
assets/: manifest.json
src/: circle_layout.rs  edge.rs  main.rs  node.rs  org_main.rs  theme.rs
