[package]
name = "lsegui"
version = "0.1.0"
edition = "2021"
authors = ["Rin Wood"]
repository = "https://github.com/Atlas16A/LSegui"
description = "Interactive graph visualization of the Gall Language Art form for Lost Skies in Rust"

[dependencies]
egui = "0.23"
eframe = "0.23"
petgraph = "0.6"
egui_graphs = "0.17.0"
"getrandom" = {version = "0.2.11", features = ["js"] }
log = "0.4"
instant =  {version = "0.1.12", features = ["wasm-bindgen"] }

#[patch.crates-io]
#"egui_graphs" = { path = "./egui_graphs" }
#"egui_graphs" = { git = "https://github.com/blitzarx1/egui_graphs" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm
